# pastviewer

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md  conanfile.py  conanfile.txt  tmp.sh  tmp2.sh
.github/workflows/: ci.yml
build-ios-xcode/ci_scripts/: ci_post_clone.sh
ci/XcodeCloud/: ci_post_clone.sh
cmake/: Helpers.cmake
deployScripts/android/: adb-log-app.sh  build_qt_android_openssl_16kb.sh  check-aab-16kb.sh  qt6-macos-mime-db-workaround.patch
deployScripts/ios/ProvisionongProfiles/: PastViewer_AppStore_profile.mobileprovision
deployScripts/mac/: restyleDmg.sh  sign.sh
helperScripts/: delete-merged-remote-branches.sh
landing/: index.html
profiles/: android-release  ios-device
resources/android/: AndroidManifest.xml  build.gradle
resources/android/res/values/: colors.xml
resources/ios/: ExportOptions-app-store.plist.in  Info.plist.in  LaunchScreen.storyboard
resources/ios/Assets.xcassets/AppIcon.appiconset/: Contents.json
resources/legalTexts/: PrivacyPolicy.txt
resources/mac/: Info.plist.in  TorrentPlayer.icns
scripts/: run-clang-tidy.py
src/App/: App.cmake  android_backtrace_stub.cpp  main.cpp
src/App/Controllers/GuiController/: GuiController.cpp  GuiController.h  PastViewModelController.cpp  PastViewModelController.h
src/App/Controllers/GuiController/platform/: Logic.h
src/App/Controllers/I18nController/: I18nController.cpp  I18nController.h
src/App/Controllers/ModelController/: PastViewModelController.cpp  PastViewModelController.h  PositionSourceAdapter.cpp  PositionSourceAdapter.h
src/App/Models/: BaseModel.cpp  BaseModel.h  ClusterModel.cpp  ClusterModel.h  I18nModel.cpp  I18nModel.h  NearestObjectsModel.cpp  NearestObjectsModel.h  PastVuModel.cpp  PastVuModel.h  ScreenObjectsModel.cpp  ScreenObjectsModel.h  UniqueCircularBuffer.h
src/App/SentryIntegration/: SentryIntegration.cpp  SentryIntegration.h
src/App/SentryIntegration/platform/android/: SentryIntegration_Android.cpp
src/App/SentryIntegration/platform/ios/: SentryIntegration_iOS.cpp
src/App/SentryIntegration/platform/mac/: SentryIntegration_macOS.cpp
src/App/Utils/: DirectionUtils.h  HoleItem.cpp  HoleItem.h  NonCopyMovable.h  PlatformUtils.h  Range.cpp  Range.h
src/App/qml/: Compass.qml  Main.qml  MainWindow.qml  PhotoDetails.qml  PhotosNear.qml  PovDirection.qml  RecenterButton.qml  RecenterItem.qml
src/App/qml/ErrorMessageDialog/: ErrorMessageDialog.qml  qmldir
src/App/qml/GuiItems/: ClusterMarker.qml  Compass.qml  PhotosNear.qml  PovDirection.qml  RecenterButton.qml  SettingHelpHint.qml  SettingWithHint.qml  SettingsButton.qml  StyledButton.qml  StyledCheckBox.qml  StyledRangeSlider.qml  StyledSliderHandle.qml  UserPosition.qml  qmldir
src/App/qml/Helpers/: MapAnimationHelper.qml  OnboardingOverlay.qml  RectangleWithHoles.qml  colors.js  qmldir  utils.js
src/App/qml/Player/: Player.qml
src/App/qml/SettingsDialog/: SettingsDialog.qml  SettingsDialogItem.qml
src/App/qml/Views/: BasePage.qml  CameraMode.qml  MapPage.qml  PhotoDetails.qml  Settings.qml
src/App/qml/Views/Helpers/: Footer.qml  Header.qml
src/App/translations/: PastViewer_de.ts  PastViewer_en.ts  PastViewer_es.ts  PastViewer_fr.ts  PastViewer_it.ts  PastViewer_ja.ts  PastViewer_ko.ts  PastViewer_pt.ts  PastViewer_ru.ts  PastViewer_sr.ts  PastViewer_zh_CN.ts
src/TorrentDownloader/: TorrentDownloader.cmake
tests/: CMakeLists.txt  ClusterModelTest.cpp  DirectionUtilsTest.cpp  UniqueCircularBufferTest.cpp
(+6 files in other folders)
